TaschenrechnerWPF/TaschenrechnerWPF/grammar.txt
<equasion> ::= <statement>

<statement> ::= <expression> | <expression>

<expression> ::= <term> | <expression><weak operator><term>
<term> ::= <element> | <term><strong operator><element>
<element> ::= <number> | <variable> | <variable><strongest operator>

<operator> ::= <weak operator> | <strong operator> | <strongest operator>
<weak operator> ::= + | -
<strong operator> ::= * | /
<strongest operator> ::= ^

<variable> ::= a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z
<number> ::= <digit>{<digit>}[.<digit>{<digit>}]
<digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9


1 + 2 * 3 + 4


<add_sub> ::= <mul_div><as_continue>
<as_continue> ::= ε | +<mul_div><as_continue> | -<mul_div><as_continue>
<mul_div> ::= <pow><md_continue>
<md_continue> ::= ε | *<pow><md_continue> | /<pow><md_continue>
<pow> ::= <literal><p_continue> | <variable><p_continue> | <bracket><p_continue>
<p_continue> ::= ε | ^<literal><p_continue> | ^<variable><p_continue> | ^<bracket><p_continue>
<bracket> ::= (<add_sub>)
<literal> ::= <digit>{<digit>}[.<digit>{<digit>}]
<digit> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
<variable> ::= a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z
